--- a/src/pages/main-page/header/header.module.scss
+++ b/src/pages/main-page/header/header.module.scss
@@ -37,12 +37,12 @@ header {
     color: var(--main-text-white-color);
     font-size: 54px;
     z-index: 2;
-    transition: 0.4s;
+    transition: .8s;
     cursor: default;
     padding: 0 8px;
     box-sizing: border-box;
     user-select: none;
-    font-family: "Raleway-Bold";
+    font-family: "Raleway-Bold", serif;
   }
 
   .colored {
