--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -111,7 +111,7 @@
       content: "Обо мне";
     }
     &:nth-child(3)::before {
-      content: "Последние работы";
+      content: "Last works";
     }
     &:nth-child(4)::before {
       content: "Опыт";
