--- a/src/pages/main-page/experience-education-section/experience-education-section.scss
+++ b/src/pages/main-page/experience-education-section/experience-education-section.scss
@@ -85,10 +85,10 @@
   }
 }
 
-.experience .experience__row .line_anim {
+.experience__row .line_anim {
   height: 100%;
 }
-.experience .experience__row .circle_grow_anim {
+.experience__row .circle_grow_anim {
   transform: scale(1);
 }
 
