--- a/src/pages/main-page/works/works.scss
+++ b/src/pages/main-page/works/works.scss
@@ -59,7 +59,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #112437;
+    background: #efbb35;
+    background: linear-gradient(to right, #0b1116, #112437);
     opacity: 0.8;
     display: none;
     transition: 0.4s;
