--- a/src/pages/main-page/skills/skills.scss
+++ b/src/pages/main-page/skills/skills.scss
@@ -4,7 +4,10 @@
 .skills_row {
   display: flex;
   width: 100%;
-  background: #eee;
+  background: rgba(232, 236, 244, 0.08);
+  border: 1px solid var(--border-subtle);
+  border-radius: 10px;
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.25);
   height: 30px;
   position: relative;
   padding-right: 50px;
@@ -12,17 +15,19 @@
   margin-bottom: 16px;
   transition: 0.2s;
   cursor: pointer;
+  overflow: hidden;
 
   .progress_bar {
     width: 100%;
     height: 100%;
     display: flex;
+    overflow: hidden;
   }
 
   .fill {
     width: 0;
     height: 100%;
-    background: #112437;
+    background: linear-gradient(135deg, rgba(20, 40, 62, 0.95), rgba(12, 23, 38, 0.95));
     transition: 0.4s;
   }
 
@@ -34,6 +39,7 @@
     position: absolute;
     right: 6px;
     top: 0;
+    color: rgba(20, 40, 62, 0.95);
   }
 
   &:nth-child(1) .fill.fill_animation_class {
@@ -91,10 +97,10 @@
 .name {
   width: 25%;
   height: 100%;
-  background: var(--main-yellow-text-color);
+  background: linear-gradient(135deg, var(--main-yellow-text-color), #9ae2ff);
   font-size: 12px;
   font-family: "Raleway-Medium", serif;
-  color: #222831;
+  color: #0b1116;
   letter-spacing: 0;
   line-height: 30px;
   text-align: center;
@@ -109,6 +115,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 
@@ -158,7 +166,7 @@
 
     &:nth-child(1) {
       transform: rotateY(-19.5deg) rotateX(180deg) translateY(-400px);
-      border-color: transparent transparent transparent rgba(50, 50, 50, 0.6);
+      border-color: transparent transparent transparent rgba(70, 80, 95, 0.6);
 
       &::before {
         background: url("../../../img/ts.png") no-repeat center;
@@ -166,14 +174,14 @@
       }
 
       &:hover {
-        border-color: transparent transparent transparent rgba(50, 50, 50, 0.95);
+        border-color: transparent transparent transparent rgba(70, 80, 95, 0.95);
       }
     }
 
     &:nth-child(2) {
       transform: rotateY(90deg) rotateZ(60deg) rotateX(180deg)
       translateY(-400px);
-      border-color: transparent transparent transparent rgba(50, 50, 50, 0.6);
+      border-color: transparent transparent transparent rgba(70, 80, 95, 0.6);
 
       &::before {
         background: url("../../../img/angular.png") no-repeat center;
@@ -181,12 +189,12 @@
       }
 
       &:hover {
-        border-color: transparent transparent transparent rgba(50, 50, 50, 0.95);
+        border-color: transparent transparent transparent rgba(70, 80, 95, 0.95);
       }
     }
     &:nth-child(3) {
       transform: rotateX(60deg) rotateY(19.5deg);
-      border-color: transparent transparent transparent rgba(50, 50, 50, 0.6);
+      border-color: transparent transparent transparent rgba(70, 80, 95, 0.6);
 
       &::before {
         background: url("../../../img/js.png") no-repeat center;
@@ -194,13 +202,13 @@
       }
 
       &:hover {
-        border-color: transparent transparent transparent rgba(50, 50, 50, 0.95);
+        border-color: transparent transparent transparent rgba(70, 80, 95, 0.95);
       }
     }
     &:nth-child(4) {
       transform: rotateX(-60deg) rotateY(19.5deg) translateX(-116px)
       translateY(-200px) translateZ(326px);
-      border-color: transparent transparent transparent rgba(50, 50, 50, 0.6);
+      border-color: transparent transparent transparent rgba(70, 80, 95, 0.6);
 
       &::before {
         background: url("../../../img/react.png") no-repeat center;
@@ -208,7 +216,7 @@
       }
 
       &:hover {
-        border-color: transparent transparent transparent rgba(50, 50, 50, 0.95);
+        border-color: transparent transparent transparent rgba(70, 80, 95, 0.95);
       }
     }
   }
@@ -239,6 +247,5 @@
     width: 100%;
   }
 }
-
 
 
