--- a/src/pages/main-page/works/works.scss
+++ b/src/pages/main-page/works/works.scss
@@ -10,7 +10,7 @@
   padding-top: 35px;
   padding-bottom: 35px;
   background: #1a1d24;
-  background: radial-gradient(40.92% 43.59% at 40.92% 29.77%, rgb(48, 53, 64) 0%, rgb(25, 28, 34) 100%), rgb(25, 28, 34);
+  background: radial-gradient(40.92% 43.59% at 40.92% 29.77%, rgba(60, 76, 102, 0.35) 0%, rgba(17, 24, 38, 0.95) 100%), #0f1723;
 }
 
 .workWrapper {
@@ -29,7 +29,9 @@
   margin-top: 2.5%;
   width: 45%;
   height: 300px;
-  box-shadow: 8px 8px 4px rgba(255, 255, 255, 0.15);
+  box-shadow: 0 18px 42px rgba(0, 0, 0, 0.3);
+  border-radius: 14px;
+  border: 1px solid var(--border-subtle);
   overflow: hidden;
   box-sizing: border-box;
   transition: 0.4s;
@@ -37,7 +39,6 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
-  border-radius: 5px;
 
   img {
     z-index: 1;
@@ -60,8 +61,8 @@
     width: 100%;
     height: 100%;
     background: #efbb35;
-    background: linear-gradient(to right, #0b1116, #112437);
-    opacity: 0.8;
+    background: linear-gradient(140deg, rgba(14, 27, 44, 0.95), rgba(20, 40, 62, 0.92));
+    opacity: 0.86;
     display: none;
     transition: 0.4s;
     z-index: 2;
@@ -71,22 +72,19 @@
     display: block;
   }
 
-
-
-
-
   &:nth-child(even) {
     margin-right: 0%;
   }
   &:hover {
     opacity: 1;
-    box-shadow: 8px 8px 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 26px 48px rgba(0, 0, 0, 0.28);
   }
 
   .work_tech_block {
     opacity: 0;
     padding: 0 12px;
-    color: rgb(236, 228, 228);
+    color: var(--main-text-white-color);
+    text-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
     text-align: center;
     font-family: "Raleway-Regular";
     font-size: 22px;
@@ -141,8 +139,8 @@
   height: 30px;
   line-height: 30px;
   font-weight: 800;
-  color: #1a1d24;
-  background: var(--main-yellow-text-color);
+  color: #0b1116;
+  background: linear-gradient(135deg, var(--main-yellow-text-color), #9ae2ff);
   font-family: "Raleway-Medium";
   border-top-right-radius: 0px;
   border-bottom-right-radius: 50px;
@@ -169,21 +167,22 @@
   display: inline-block;
   padding: 10px 16px;
   box-sizing: border-box;
-  background-color: #112437;
+  background: linear-gradient(145deg, rgba(20, 40, 62, 0.95), rgba(12, 23, 38, 0.95));
   color: rgb(255, 255, 255);
   border-width: 1px 1px 2px 1px;
   border-style: solid;
-  border-color: #222;
-  border-radius: 3px;
+  border-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
   font-family: "Raleway-Bold";
   font-size: 16px;
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.35);
   margin-right: 3px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
   transition: 0.2s;
   z-index: 2;
+  letter-spacing: 0.4px;
 
   span {
     z-index: 2;
@@ -207,7 +206,7 @@
     width: 100%;
     position: absolute;
     z-index: 1;
-    background-color: #1d3e5f;
+    background-color: rgba(125, 215, 255, 0.16);
     transition: 0.2s;
   }
 
@@ -220,13 +219,17 @@
     width: 100%;
     position: absolute;
     z-index: 1;
-    background-color: #2c4663;
+    background-color: rgba(112, 96, 255, 0.16);
     transition: 0.2s;
   }
 
   &.btn_bottom {
     position: absolute;
     bottom: 6px;
+  }
+
+  &:hover {
+    transform: translateY(-2px);
   }
 }
 
@@ -238,4 +241,3 @@
   height: 100%;
   z-index: 2;
 }
-
