--- a/src/pages/main-page/about-section/about.scss
+++ b/src/pages/main-page/about-section/about.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/default" as *;
+@use '../../../styles/default' as *;
 
 h2 {
   @include h2_txt(32px, 4px);
@@ -19,6 +19,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     box-sizing: border-box;
+    max-width: 980px;
   }
 
   &__image_container {
@@ -35,16 +36,18 @@ h2 {
 .about__wrapper {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .about__text_body {
   display: flex;
   margin-top: 32px;
-  padding: 24px;
+  padding: 28px;
   border-radius: 14px;
   background: var(--surface-color);
   box-shadow: 0 18px 48px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--border-subtle);
+  gap: 18px;
 }
 
 .line_l {
@@ -62,10 +65,10 @@ h2 {
   display: flex;
   flex-direction: column;
   font-family: "Raleway-Regular";
-  font-size: 19px;
+  font-size: 18px;
   color: var(--main-text-white-color);
-  line-height: 1.65;
-  gap: 16px;
+  line-height: 1.7;
+  gap: 18px;
 
   span {
     margin-bottom: 0;
@@ -73,32 +76,22 @@ h2 {
 }
 
 @media screen and (max-width: 1024px) {
-  .about__text {
-    width: 100%;
-  }
-
   .about__text_body {
     padding: 24px;
   }
 
   .text_block {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .about__text_body {
-    flex-direction: column;
     padding: 18px 16px;
   }
 
-  .line_l {
-    width: 80px;
-    margin-bottom: 12px;
-  }
-
   .text_block {
-    font-size: 16px;
-    line-height: 1.6;
+    font-size: 15px;
+    line-height: 1.65;
   }
 }
