--- a/src/styles/_adaptive.scss
+++ b/src/styles/_adaptive.scss
@@ -21,7 +21,7 @@ section {
   width: 100%;
   height: auto;
   padding: 150px 80px;
-  background: #f8f8f8;
+  background: rgba(248, 248, 248, 0.7);
   display: flex;
   align-items: center;
   position: relative;
