--- a/src/pages/main-page/header/header.module.scss
+++ b/src/pages/main-page/header/header.module.scss
@@ -39,13 +39,13 @@ header {
     color: var(--main-text-white-color);
     font-size: 54px;
     z-index: 2;
-    transition: .6s;
     cursor: default;
     padding: 0 8px;
     box-sizing: border-box;
     user-select: none;
     font-family: "Raleway-Bold", serif;
     text-shadow: 0 10px 24px rgba(0,0,0,0.35);
+    transition: transform 400ms ease-out;
   }
 
   .colored {
@@ -60,6 +60,8 @@ header {
 
     span {
       font-size: 38px;
+      transition: transform 600ms ease-out;
+
     }
 
     .colored {
