--- a/src/styles/_adaptive.scss
+++ b/src/styles/_adaptive.scss
@@ -1,7 +1,15 @@
 @use "./default.scss" as *;
 
+$section-padding-desktop: 144px 260px;
+$section-padding-1680: 100px 180px;
+$section-padding-1500: 100px 140px;
+$section-padding-1400: 80px 100px;
+$section-padding-1100: 80px 60px;
+$section-padding-900: 40px 40px;
+$section-padding-768: 20px 10px;
+
 section {
-  @include paddings(144px, 260px);
+  @include paddings(nth($section-padding-desktop, 1), nth($section-padding-desktop, 2));
   box-sizing: border-box;
 }
 
@@ -30,7 +38,7 @@ section {
 
 @media screen and (max-width: 1680px) {
   section {
-    @include paddings(100px, 180px);
+    @include paddings(nth($section-padding-1680, 1), nth($section-padding-1680, 2));
   }
 
   .work__prev {
@@ -52,7 +60,7 @@ section {
   }
 
   section {
-    @include paddings(100px, 140px);
+    @include paddings(nth($section-padding-1500, 1), nth($section-padding-1500, 2));
   }
   .separator {
     height: 130px;
@@ -73,7 +81,7 @@ section {
     font-size: 18px;
   }
   section {
-    @include paddings(80px, 100px);
+    @include paddings(nth($section-padding-1400, 1), nth($section-padding-1400, 2));
   }
   h2,
   .separator h2 {
@@ -135,7 +143,7 @@ section {
 
 @media screen and (max-width: 1100px) {
   section {
-    @include paddings(80px, 60px);
+    @include paddings(nth($section-padding-1100, 1), nth($section-padding-1100, 2));
   }
 
   .all_skills {
@@ -198,7 +206,7 @@ section {
   }
 
   section {
-    @include paddings(40px, 40px);
+    @include paddings(nth($section-padding-900, 1), nth($section-padding-900, 2));
   }
   h2,
   .separator h2 {
@@ -313,7 +321,7 @@ section {
   }
 
   section {
-    @include paddings(20px, 10px);
+    @include paddings(nth($section-padding-768, 1), nth($section-padding-768, 2));
   }
 
   .line_l {
@@ -544,4 +552,3 @@ section {
     width: auto;
   }
 }
-
